--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "usestate": "^1.1.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
