--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.513.0",
     "mongoose": "^8.15.1",
