--- a/package.json
+++ b/package.json
@@ -13,17 +13,25 @@
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "lamejs": "^1.2.1",
     "lucide-react": "^0.513.0",
     "mongoose": "^8.15.1",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
+    "stream-browserify": "^3.0.0",
     "usestate": "^1.1.3",
+    "util": "^0.12.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
