--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.6.2",
